tests/suite/snapshots/suite__check__tests__check__bad_length_2.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_length_2.xi:2:13]
   │
 2 │     x:int = length(true)
   ·             ──────┬─────  
   ·                   ╰─────── Expected any[] but found bool
───╯

